# trackman-mcp-client

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  LICENSE  PUBLISHING.md  README.md  pyproject.toml  server.json
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/golf-coaching/: SKILL.md
.github/workflows/: ci.yml
docs/: trackman-api.md
docs/superpowers/plans/: 2026-06-30-multi-angle-drill-visualization.md  2026-07-02-trajectory-first-diagnosis-viz.md
docs/superpowers/specs/: 2026-06-30-multi-angle-drill-visualization-design.md  2026-07-02-trajectory-first-diagnosis-viz-design.md
mcpb/: manifest.json  pyproject.toml
scripts/: check-visualization.py  release.sh  validate.py  visualize.py
skills/drill-library/: PROMPT.md  SKILL.md
skills/golf-coaching/: PROMPT.md  SKILL.md
skills/golf-practice-at-home/: PROMPT.md  SKILL.md
skills/trackman-api-discovery/: SKILL.md
skills/trackman-session-analyzer/: PROMPT.md  SKILL.md
skills/trackman-stats-analysis/: PROMPT.md  SKILL.md
skills/trackman-visualizer/: PROMPT.md  SKILL.md
src/trackman_mcp/: __init__.py  analysis.py  client.py  config.py  login.py  onboarding.py  prompts.py  queries.py  server.py  session_store.py  storage.py  token_store.py  training_store.py  visualize.py
tests/: test_analysis.py  test_client.py  test_config.py  test_login_recovery.py  test_login_stdout.py  test_prompts.py  test_queries.py  test_server.py  test_session_store.py  test_setup.py  test_storage.py  test_token_store.py  test_verify_tool.py  test_version.py  test_visualize.py
