[project]
name = "trackman-golf-extension"
version = "0.2.0"
description = "Claude Desktop extension launcher for the Trackman Golf MCP server."
requires-python = ">=3.11"
# The host (Claude Desktop) installs these with uv at runtime — cross-platform,
# compiled wheels included. The server itself comes from the published package.
dependencies = [
    "trackman-mcp>=0.2.0",
]

# This is a launcher env, not an installable package — don't try to build src/.
[tool.uv]
package = false
